# Outpatient-Dashboard

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: dept_classification.csv  dept_targets.csv  llm_config.yaml  non_business_days.csv
data/aggregated/2025-04/: 00_summary.csv  01_dept_weekday_hour.csv  02_dept_monthly.csv  03_dept_time_stats.csv  (+12 more)
docs/: doctor_analysis.html  drug_revisit.html  hourly_heatmap.html  index.html  slot_redesign.html
docs/monthly/: 2025-04.html  2025-05.html  2025-06.html  2025-07.html  2025-08.html  2025-09.html  2025-10.html  2025-11.html  2025-12.html  2026-01.html  2026-02.html  2026-03.html  2026-04.html
scripts/: deploy.sh  local_build.sh  monthly_build.sh
src/: __init__.py  aggregate.py  anonymize.py  cli.py  llm_client.py
src/core/: __init__.py  classify.py  data_loader.py  grading.py  highlights.py  observations.py
src/dashboards/: __init__.py  dept_drilldown.py  doctor_analysis.py  doctor_heatmap.py  drug_revisit.py  hourly_heatmap.py  hub.py  monthly.py  slot_heatmap.py  slot_redesign.py
static/css/: theme.css
static/js/: common.js
templates/: _layout.html  base.html  dept_drilldown.html  dept_drilldown_index.html  doctor_analysis.html  doctor_heatmap.html  drug_revisit.html  hourly_heatmap.html  index.html  monthly.html  slot_heatmap.html  slot_redesign.html
tests/: test_aggregate_hourly.py  test_anonymize.py  test_classify.py  test_data_loader.py  test_doctor_heatmap.py  test_grading.py  test_highlights.py  test_observations.py  test_slot_heatmap.py  test_slot_key.py  test_slot_redesign.py
(+570 files in other folders)
